--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     color: #0736FE;
     background-color: #f6eee1;
     background-color: #fff;
+    overflow-x: hidden;
 }
 h1{
     font-weight: bolder;
@@ -61,7 +62,7 @@ b{
         width: 100%;
     }
   }
-@media only screen and (max-width: 380px){
+@media only screen and (max-width: 390px){
     h1{
         font-size: 24px;
     }
